# UniEngine

./: .clang-format  .codedocs  .codedocs.in  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Folder.DotSettings  LICENSE  README  README.md  build.cmd  build.sh  setup.py
Resources/: Useful links.txt
Resources/Example Projects/: temp_skin_2951_140733547266464_888834631.uefoldermetadata
Resources/Example Projects/Physics/: .ueassetregistry  .uemetadata  Anchor.ueprefab  Anchor.ueprefab.umeta  New Scene(1).uescene  New Scene.uemetadata  New Scene.uescene  New Scene.uescene.umeta  Physics.ueproj
Resources/Example Projects/Planet/: .ueassetregistry  .uemetadata  New Material.uemat  New Scene (1).uemetadata  New Scene (1).uescene  New Scene (2).uemetadata  New Scene (2).uescene  New Scene (3).uemetadata  New Scene (3).uescene  New Scene.uemetadata  New Scene.uescene  Planet 3.ueprefab  Planet.uemetadata  Planet.ueproj  Planet.uescene  Textures.uefoldermetadata
Resources/Example Projects/Rendering/: .ueassetregistry  .uemetadata  Models.uefoldermetadata  New Scene.uemetadata  Rendering.ueproj
Resources/Example Projects/Star Cluster/: .ueassetregistry  .uemetadata  New Scene(1).uescene  New Scene.uescene  New Scene.uescene.umeta  Star Cluster.ueproj
Resources/Models/LivingRoom/: living_room.mtl
Resources/Models/Sponza/: sponza.mtl
Resources/Models/TV/: retrotv.mtl
Resources/Primitives/: Torus.fbx
Resources/Projects/96697897/: .ueassetregistry  New Project.urproj  New Scene.uescene
Resources/Shaders/Fragment/: BackGround.frag  BloomCombine.frag  BlurFilter.frag  EnvironmentalMapIrradianceConvolution.frag  EquirectangularMapToCubemap.frag  Gizmo.frag  HSumFilter.frag  Highlight.frag  PositionReconstruct.frag  SSAOCombine.frag  SSAOGeometry.frag  Skybox.frag  StandardDeferred.frag  StandardDeferredLighting.frag  StandardForward.frag  VSumFilter.frag
Resources/Shaders/Geometry/: PointLightShadowMap.geom  VSMHFilterHelper.geom  VSMVFilterHelper.geom
Resources/Shaders/Include/: Uniform.glsl  Uniform.inc  Uniform_BT.glsl  Uniform_BT.inc  Uniform_LEGACY.inc
Resources/Shaders/Vertex/: ColoredGizmos.vert  DirectionalLightShadowMapInstancedSkinned.vert  DirectionalLightShadowMapSkinned.vert  Empty.vert  EmptyInstanced.vert  EmptySkinned.vert  (+19 more)
cmake/: FindGLM.cmake
docs/: Doxyfile.in
docs/html/: _animation_8cpp.html  _animation_8hpp.html  _animation_8hpp_source.html  _animation_layer_8cpp.html  _animation_manager_8cpp.html  _animation_manager_8hpp.html  _animation_manager_8hpp_source.html  _animator_8cpp.html  _animator_8hpp.html  _animator_8hpp_source.html  _application_8cpp.html  _asset_manager_8cpp.html  _asset_manager_8hpp.html  _asset_manager_8hpp_source.html  _asset_ref_8cpp.html  _asset_ref_8hpp.html  _asset_ref_8hpp_source.html  _camera_8cpp.html  _camera_8hpp.html  _camera_8hpp_source.html  _class_registry_8cpp.html  _class_registry_8cpp.js  _class_registry_8hpp.html  _class_registry_8hpp_source.html  _collider_8cpp.html  _collider_8hpp.html  _collider_8hpp.js  _collider_8hpp_source.html  _console_layer_8cpp.html  _console_manager_8cpp.html  _console_manager_8hpp.html  _console_manager_8hpp.js  _console_manager_8hpp_source.html  _cubemap_8cpp.html  _cubemap_8hpp.html  _cubemap_8hpp_source.html  _default_resources_8cpp.html  _default_resources_8hpp.html  _default_resources_8hpp_source.html  _editor_layer_8cpp.html  (+815 more)
docs/latex/: _animation_8cpp.tex  _animation_8hpp.tex  _animation_8hpp_source.tex  _animation_manager_8cpp.tex  _animation_manager_8hpp.tex  _animation_manager_8hpp_source.tex  _animator_8cpp.tex  _animator_8hpp.tex  _animator_8hpp_source.tex  _application_8cpp.tex  _asset_manager_8cpp.tex  _asset_manager_8hpp.tex  _asset_manager_8hpp_source.tex  _camera_8cpp.tex  _camera_8hpp.tex  _camera_8hpp_source.tex  _class_registry_8cpp.tex  _class_registry_8hpp.tex  _class_registry_8hpp_source.tex  _collider_8cpp.tex  _collider_8hpp.tex  _collider_8hpp_source.tex  _console_manager_8cpp.tex  _console_manager_8hpp.tex  _console_manager_8hpp_source.tex  _cubemap_8cpp.tex  _cubemap_8hpp.tex  _cubemap_8hpp_source.tex  _default_resources_8cpp.tex  _default_resources_8hpp.tex  _default_resources_8hpp_source.tex  _editor_manager_8cpp.tex  _editor_manager_8hpp.tex  _editor_manager_8hpp_source.tex  _entity_8cpp.tex  _entity_8hpp.tex  _entity_8hpp_source.tex  _entity_manager_8cpp.tex  _entity_manager_8hpp.tex  _entity_manager_8hpp_source.tex  (+437 more)
include/core/: CameraControlSystem.hpp
include/lib/: Animation.hpp  AnimationManager.hpp  Animator.hpp  Application.hpp  CameraComponent.hpp  Cubemap.hpp  DefaultResources.hpp  Editor.hpp  EditorManager.hpp  Entity.hpp  EntityManager.hpp  EnvironmentalMap.hpp  FileIO.hpp  Gui.hpp  ImGuiFileBrowser.hpp  InputManager.hpp  JobManager.hpp  LightProbe.hpp  Lights.hpp  Material.hpp  Math.hpp  Mesh.hpp  MeshRenderer.hpp  Model.hpp  OpenGLUtils.hpp  Particles.hpp  PhysicsManager.hpp  PostProcessing.hpp  PrivateComponentStorage.hpp  ProfilerManager.hpp  ReflectionProbe.hpp  RenderManager.hpp  RenderTarget.hpp  ResourceBehaviour.hpp  ResourceManager.hpp  RigidBody.hpp  SerializationManager.hpp  SkinnedMesh.hpp  SkinnedMeshRenderer.hpp  SystemBase.hpp  (+7 more)
python/: rendering.py
src/app/: Physics.cpp  Planet.cpp  Project.cpp  Rendering.cpp  Sample.cpp  StarCluster.cpp  imgui.ini  sample-main.cpp
src/core/: CameraControlSystem.cpp
src/lib/: Animation.cpp  AnimationLayer.cpp  AnimationManager.cpp  Animator.cpp  Application.cpp  Articulation.cpp  AssetManager.cpp  AssetRef.cpp  Camera.cpp  CameraComponent.cpp  ClassRegistry.cpp  Collider.cpp  Console.cpp  ConsoleLayer.cpp  ConsoleManager.cpp  Cubemap.cpp  D6Joint.cpp  Debug.cpp  DefaultResources.cpp  DistanceJoint.cpp  Editor.cpp  EditorLayer.cpp  EditorManager.cpp  Entities.cpp  Entitiy.cpp  Entity.cpp  EntityManager.cpp  EntityMetadata.cpp  EnvironmentalMap.cpp  External.cpp  FileIO.cpp  FileSystem.cpp  FixedJoint.cpp  Graphics.cpp  Hair.cpp  IAsset.cpp  IHandle.cpp  ILayer.cpp  IPrivateComponent.cpp  ISerializable.cpp  (+54 more)
src/python/: PythonBinding.cpp
(+533 files in other folders)
